--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			data-sap-ui-xx-bindingSyntax="complex"
 			data-sap-ui-resourceroots='{"barcodeScanner": ""}'>
 		</script> -->
+	<script src="volume-meter.js"></script>
 		<script type="text/javascript">
 			
 			// var oModel = new JSONModel(Device);
@@ -22,11 +23,37 @@
 			// Disable the scan barcode button by default
 			// oModel.setProperty("/barcodeScanEnabled",false);
 			if(navigator && navigator.mediaDevices && navigator.mediaDevices.getUserMedia){
-				navigator.mediaDevices.getUserMedia({video:true}).then(function(stream){
-					// device supports video, which means will enable the scan button
-					// oModel.setProperty("/barcodeScanEnabled",true);
-				}).catch(function(err){
-					// not supported, barcodeScanEnabled already default to false
+				navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function(stream){
+					console.log('dsfl')
+					audioContext = new AudioContext();
+					analyser = audioContext.createAnalyser();
+					microphone = audioContext.createMediaStreamSource(stream);
+					javascriptNode = audioContext.createScriptProcessor(2048, 1, 1);
+
+					analyser.smoothingTimeConstant = 0.8;
+					analyser.fftSize = 1024;
+
+					microphone.connect(analyser);
+					analyser.connect(javascriptNode);
+					javascriptNode.connect(audioContext.destination);
+					javascriptNode.onaudioprocess = function() {
+					  var array = new Uint8Array(analyser.frequencyBinCount);
+					  analyser.getByteFrequencyData(array);
+					  var values = 0;
+
+					  var length = array.length;
+					  for (var i = 0; i < length; i++) {
+					    values += (array[i]);
+					  }
+
+					  var average = values / length;
+
+					console.log(Math.round(average));
+					// colorPids(average);
+					}
+				})
+				.catch(function(err) {
+    /* handle the error */
 				});
 			}
 			
