--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			data-sap-ui-xx-bindingSyntax="complex"
 			data-sap-ui-resourceroots='{"barcodeScanner": ""}'>
 		</script> -->
-	<script src="volume-meter.js"></script>
+	<!-- <script src="volume-meter.js"></script> -->
 		<script type="text/javascript">
 			
 			// var oModel = new JSONModel(Device);
@@ -24,7 +24,20 @@
 			// oModel.setProperty("/barcodeScanEnabled",false);
 			if(navigator && navigator.mediaDevices && navigator.mediaDevices.getUserMedia){
 				navigator.mediaDevices.getUserMedia({ audio: true, video: true }).then(function(stream){
-					console.log('dsfl')
+					console.log('111111')
+					var AudioContext = window.AudioContext // Default
+					    || window.webkitAudioContext // Safari and old versions of Chrome
+					    || false; 
+
+					if (AudioContext) {
+					    // Do whatever you want using the Web Audio API
+					    var ctx = new AudioContext;
+					    // ...
+					} else {
+					    // Web Audio API is not supported
+					    // Alert the user
+					    alert("Sorry, but the Web Audio API is not supported by your browser. Please, consider upgrading to the latest version or downloading Google Chrome or Mozilla Firefox");
+					}
 					audioContext = new AudioContext();
 					analyser = audioContext.createAnalyser();
 					microphone = audioContext.createMediaStreamSource(stream);
