--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	.a_wrap{
 		width: 100vw;
 		height: 100%;
-		background-image: url('image/bg_3.png');
+		/*background-image: url('image/bg_3.png');*/
 		background-size: 100% 100%;
 	}
 	.side_wrap{
@@ -74,6 +74,14 @@
 	.a_r{
 		right: 0;
 		transform-origin: right top
+	}
+	.middle{
+	    position: absolute;
+	    left: 0;
+	    background: black;
+	    width: 50vw;
+	    top: 50%;
+	    height: 13%;
 	}
 	  </style>
 		<script type="text/javascript">
@@ -131,6 +139,9 @@
 		    	$('.a').css({'transform':'scale(1)'})
 		    	$('.a').css({'width': '50vw'})
 		    	$('.a').css({'height':100-map_range(average, min, bound, 60, 75)+'%'})
+    	$('.middle').css({'width': '35vw'})
+    	$('.middle').css({'top': '67.5%'})
+    	$('.middle').css({'height': '16%'})
 		}else{
 				$('.side_wrap').css({'height':'100%'})
 				$('img').css({'width':map_range(average, bound, max, 69, 46)+'%'})
@@ -140,6 +151,9 @@
 		    	$('.a').css({'transform':'scale('+map_range(average, bound, max, 1, 1.12)+')'})
 		    	$('.a').css({'width': '32vw'})
 		    	$('.a').css({'height': '23%'})
+    	$('.middle').css({'width' : map_range(average, bound, max, 25, 12)+'vw'})
+    	$('.middle').css({'top': map_range(average, bound, max, 55.5, 40)+'%'})
+    	$('.middle').css({'height': map_range(average, bound, max, 13, 13)+'%'})
 		}
 					}
 				})
@@ -157,10 +171,12 @@
 		<div class="a a_l"></div>
 		<div class="a a_r"></div>
 		<div class="side_wrap side_wrap_l">
+		<div class="middle"></div>
 			<img src="image/side-08.svg">
 			<div class="bottom"></div>
 		</div>
 		<div class="side_wrap side_wrap_r">
+		<div class="middle"></div>
 			<img src="image/side-08.svg">
 			<div class="bottom"></div>
 		</div>
