--- a/aaa.html
+++ b/aaa.html
@@ -60,7 +60,7 @@
 	}
 	.a{
 		width: 50vw;
-		background-image: url('image/a-09.svg');
+		background-image: url('image/a-010.svg');
 		background-size: 100% 100%;
 		position: absolute;
 	}
@@ -117,7 +117,7 @@
     	$('.a').css({'transform':'scale(1.12)'})
     	$('.a').css({'width': '32vw'})
     	$('.a').css({'height': '23%'})
-    	$('.middle').css({'width': '30vw'})
+    	$('.middle').css({'width': '15vw'})
     	$('.middle').css({'top': '40%'})
     	$('.middle').css({'height': '13%'})
 
@@ -133,6 +133,9 @@
 //     	$('.a').css({'transform':'scale(1)'})
 //     	$('.a').css({'width': '50vw'})
 //     	$('.a').css({'height':100-map_range(average, min, bound, 60, 75)+'%'})
+  //   	$('.middle').css({'width': '35vw'})
+  //   	$('.middle').css({'top': '67.5%'})
+  //   	$('.middle').css({'height': '16%'})
 
 // }else{
 // 		$('.side_wrap').css({'height':'100%'})
@@ -143,6 +146,9 @@
 //     	$('.a').css({'transform':'scale('+map_range(average, bound, max, 1, 1.12)+')'})
 //     	$('.a').css({'width': '32vw'})
 //     	$('.a').css({'height': '23%'})
+  //   	$('.middle').css({'width: map_range(average, bound, max, 27, 15)+'vw'})
+  //   	$('.middle').css({'top': map_range(average, bound, max, 55.5, 40)+'%'})
+  //   	$('.middle').css({'height': map_range(average, bound, max, 13, 13)+'%'})
 // }
 // }
 
